Fixed github account url

--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ footer-links:
   email: asamir97@hotmail.com
   facebook:
   flickr:
-  github: github.com/AhmedSa-mir
+  github: AhmedSa-mir
   instagram:
   linkedin:
   pinterest:
