Fixed blog profile pic

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Ahmed Samir
 description: Egyptian Computer Engineer
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://avatars1.githubusercontent.com/u/650760?v=3&s=400
+avatar: https://avatars3.githubusercontent.com/u/18093386?s=460&v=4
 
 #
 # Flags below are optional
